--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@
     margin: 0.5rem 0;
   }
   
-  li.main-menu-item a.nav-link:hover, li.main-menu-item.active a.nav-link.is-active {
+  li.main-menu-item a.nav-link:hover, li.main-menu-item a.nav-link.is-active {
     border-bottom: 2px solid black;
     color: black;
   }
