wip: vimeo image toggles off, need to adjust play/pause styles to allow toggle and fix youtube

--- a/templates/block/block--video-reveal.html.twig
+++ b/templates/block/block--video-reveal.html.twig
@@ -42,12 +42,14 @@
 						<div class="ucb-video-reveal-controls">
 							<span class="ucb-video-reveal-text">{{ content.field_video_reveal_text}}</span>
 						</div>
-						<div class="ucb-video-reveal-image">
-							{{ content.field_video_reveal_image|render }}
-						</div>
+						<div>
+							<div class="ucb-video-reveal-image">
+								{{ content.field_video_reveal_image|render }}
+							</div>
 						<span class="ucb-hero-unit-video-control-button ucb-hero-unit-video-play-pause" title="Play/Pause video">
 							<i class="fa fa-play"></i>
 						</span>
+						</div>
 					</div>
 				</div>
 			</div>
