--- a/css/block/video-reveal.css
+++ b/css/block/video-reveal.css
@@ -93,7 +93,7 @@ span.ucb-vid-reveal-icon {
   margin-left: 0px;
 }
 .ucb-video-reveal-image{
-display: none;
+display: inline;
 }
 
 .ucb-hero-unit-video-wrapper{
@@ -102,9 +102,9 @@ display: none;
   max-height: 100%;
 }
 
-.ucb-hero-unit-video-control-button{
+/* .ucb-hero-unit-video-control-button{
   position: relative;
   top:50%;
   left:50%;
   color: red;
-}
+} */
